Updating Temp Site

--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,46 @@ h1 {
 }
 
 p {
-  font-weight:300;
+    font-weight:300;
 }
 
 .warning-content {
   position:absolute;
-  top:25%;
+  top:5%;
   width:100%;
   height:300px;
   text-align:center;
   margin:0;
-  
-  
+}
+
+.btn-default {
+    margin-top: 15px;
+    background: #4923F4;
+    color: #EDDFD8;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.btn-default:hover {
+  background: #1d0e61;
+  color: #EDDFD8;
+}
+
+.wrapper {
+  padding-top: 30px;
+  display: none;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.roles {
+    font-size: 115%;
+    letter-spacing: .07em;
+    height: 45px;
+    vertical-align: middle;
+    overflow: hidden;
+}
+
+.roles div {
+    height: 50px;
+    transition: margin-top 1s ease-in-out;
 }
