Added possible mobile style

--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,22 @@ p {
     height: 50px;
     transition: margin-top 1s ease-in-out;
 }
+
+
+@media (min-width: 43.75em) {
+  h1 {
+    font-size: 2.5em;
+    line-height: 1.125;
+  }
+        
+  p {
+    font-size: 1em;
+    line-height: 1.375;
+  }
+    
+  .roles {
+    font-size: 2em;
+    line-height: 1.25;
+  }
+
+}
