--- a/styles/common.css
+++ b/styles/common.css
@@ -5,7 +5,12 @@
   --black: #161529;
 }
 
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "Raleway", sans-serif;
   background: var(--background);
   color: var(--black);
 }
