--- a/styles/common.css
+++ b/styles/common.css
@@ -14,3 +14,14 @@ html {
   background: var(--background);
   color: var(--black);
 }
+
+h1 {
+  font-size: 25px;
+  font-weight: 600;
+  color: var(--blue);
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
