--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,8 @@
 
 :root {
   --background: #fff8e5;
-  --blue: #4E30D1;
+  --blue: #1E2FEE;
+  --dark-blue: #1D29A7;
   --black: #161529;
 }
 
@@ -24,4 +25,10 @@ h1 {
 h2 {
   font-size: 20px;
   font-weight: 600;
+  color: var(--dark-blue);
+}
+
+h3 {
+  font-weight: 700;
+  border-bottom: 1px solid;
 }
