--- a/styles/common.css
+++ b/styles/common.css
@@ -16,10 +16,15 @@ html {
   color: var(--black);
 }
 
+body {
+  margin: 2em;
+}
+
 h1 {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 600;
   color: var(--blue);
+  text-align: center;
 }
 
 h2 {
@@ -29,6 +34,13 @@ h2 {
 }
 
 h3 {
-  font-weight: 700;
+  font-weight: 600;
   border-bottom: 1px solid;
+  width: fit-content;
+  font-size: 16px;
+}
+
+p {
+  font-size: 16px;
+  text-align: justify;
 }
